# awt

./: CHANGELOG.org  README.md  RUNAWT.sh  TODO.org  abif_list.yml  awt.py  cache_awt.py  conduits.py  conftest.py  devdoc.org  examplelist.yml  fetch_awt_url.py  flaskabif.py  html_util.py  perf_awt.py  pyproject.toml  template-structure.org  test_awt_routes.py  test_codefmt.py  test_output.py  test_performance.py
docs/: IRV-tiebreaker.md  bifhub.md  browse.md  dataflow.md  debug.md  homepage.md  index.md  lightbox.md  linkpreview.md  notices.md  performance.md  refactor.md  release-checklist.org  routes.md  summary-per-method.md  tags-FIXME.md  tests.md  ux.md
src/: linkpreview.py  server_util.py
static/css/: electostyle.css
static/js/: abifwebtool.js  colorService.js  irvDisplay.js  main.js
templates/: abifbox-snippet.html  all-snippet.html  also-note-snippet.html  approval-snippet.html  base.html  browse-index.html  default-index.html  election-list-snippet.html  elim-pairwise-snippet.html  example-index.html  example-list-snippet.html  example-snippet.html  footer.snippet.html  fptp-snippet.html  homepage-snippet.html  index.html  intro-snippet.html  irv-snippet.html  pairwise-snippet.html  pairwise-summary-only.html  results-index.html  star-snippet.html  tag-browser-snippet.html  tag-index.html
templates/partials/: also-note.html  head.html  header.html
tests/: conftest.py  test_browser.py  test_codefmt.py  test_irv.py  test_output.py  test_performance.py
